<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="data_of_birth">Data of Birth</string>
    <string name="nid">NID</string>
    <string name="blood_group">Blood Group</string>
    <string name="next">next</string>
    <string name="info_so_far">Info so far</string>
    <string name="show_name">NAME</string>
    <string name="show_date_of_birth">Date of Birth</string>
    <string name="show_nid">NID</string>
    <string name="show_blood_group">blood group</string>
    <string name="student_id">Student ID</string>
    <string name="study_level">Study Level</string>
    <string name="next2">next2</string>
    <string name="next3">Next</string>

    <string-array name="array_uninersity">
        <item>Select University</item>
        <item>Brac</item>
        <item>North South University</item>
        <item>Independent University, Bangladesh</item>
        <item>American International University-Bangladesh</item>
    </string-array>
    <string-array name="array_uninersity_department">
        <item>Selcet Department</item>
        <item>School of Engineering and Physical Sciences</item>
        <item>School of Health and Life Sciences</item>
        <item>School of Business and Economics</item>
        <item>School of Humanities and Social Sciences</item>
    </string-array>

</resources>