<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".finalscreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="42dp"
        android:text="University"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="106dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="42dp"
        android:text="University Department"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/display_spinner1_1"
        android:layout_width="96dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_spinner2_1"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_marginBottom="25dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/display_student_id1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/display_spinner1_1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="Student ID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/display_studnet_level1"
        android:layout_width="51dp"
        android:layout_height="50dp"

        android:layout_marginStart="188dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/display_name2"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="Student Level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/display_student_id1"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/display_studnet_level1"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/display_name2"
        android:layout_width="154dp"
        android:layout_height="24dp"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="40dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/display_dob2"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/display_dob2"
        android:layout_width="128dp"
        android:layout_height="18dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="28dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/display_nid2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="54dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/show_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:text="@string/show_date_of_birth"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/display_dob2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/display_nid2"
        android:layout_width="71dp"
        android:layout_height="45dp"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="28dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/display_bloodgroup2"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/display_bloodgroup2"
        android:layout_width="154dp"
        android:layout_height="0dp"
        android:layout_marginStart="96dp"

        android:layout_marginBottom="40dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="92dp"
        android:text="@string/show_nid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/show_blood_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="58dp"
        android:layout_height="31dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="94dp"
        android:layout_height="43dp"
        android:layout_marginBottom="64dp"
        android:text="Phonenumber"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phonenumber"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="37dp"
        android:layout_height="34dp"
        android:layout_marginStart="156dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/phonenumber"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="47dp"
        android:layout_height="37dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>